<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:layout_editor_absoluteY="81dp"
    tools:layout_editor_absoluteX="0dp">


    <ImageView
        android:id="@+id/background_top"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="0dp"
        android:layout_marginTop="0dp"
        app:layout_constraintBottom_toBottomOf="@+id/release_date"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/light_rectangle" />


    <ImageView
        android:id="@+id/background_bottom"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:srcCompat="@drawable/very_light_rectangle"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/background_top"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintVertical_bias="1.0" />

    <ImageView
        android:id="@+id/selectionLeft"
        android:layout_width="185dp"
        android:layout_height="152dp"
        android:layout_marginBottom="1dp"
        android:layout_marginLeft="-7dp"
        app:layout_constraintBottom_toTopOf="@+id/ratingBar"
        app:layout_constraintLeft_toLeftOf="parent"
        app:srcCompat="@drawable/selection_rectangle"
        tools:layout_editor_absoluteY="384dp" />

    <ImageView
        android:id="@+id/selectionRight"
        android:layout_width="0dp"
        android:layout_height="153dp"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="8dp"
        app:layout_constraintBottom_toTopOf="@+id/ratingBar"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toRightOf="@+id/selectionLeft"
        app:layout_constraintRight_toRightOf="parent"
        app:srcCompat="@drawable/selection_rectangle"
        tools:layout_editor_absoluteX="192dp"
        tools:layout_editor_absoluteY="384dp" />

    <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:gravity="center"
            android:textAppearance="@style/HeaderText"
            android:textSize="56sp"
            tools:text="Guardians of The Galaxy"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

    <TextView
        android:id="@+id/release_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:textAppearance="@style/ReleaseText"
        android:textSize="45sp"
        tools:text="March 23, 2015"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/title"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <ImageView
        android:id="@+id/favorite_button"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginRight="16dp"
        app:layout_constraintRight_toRightOf="parent"
        app:srcCompat="@drawable/fav_button_unpressed"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="-20dp"
        app:layout_constraintBottom_toTopOf="@+id/description_text" />

    <RatingBar
        android:id="@+id/ratingBar"
        android:isIndicator="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        android:numStars="5"
        tools:layout_editor_absoluteY="539dp"
        app:layout_constraintHorizontal_bias="0.502" />

    <TextView
        android:id="@+id/description_text"
        android:layout_width="342dp"
        android:layout_height="166dp"
        android:gravity="center"
        android:textAppearance="@style/HeaderText"
        android:textSize="20sp"
        tools:text="@string/nonsenseparagraph"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/release_date"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.553" />


    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="78dp"
        android:layout_height="74dp"
        app:srcCompat="@drawable/play"
        android:layout_marginLeft="69dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@+id/selectionLeft"
        android:layout_marginTop="65dp" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="83dp"
        android:layout_height="102dp"
        app:srcCompat="@drawable/check_review"
        android:layout_marginRight="58dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginEnd="58dp"
        app:layout_constraintTop_toTopOf="@+id/selectionRight"
        android:layout_marginTop="41dp" />

    <TextView
        android:id="@+id/ReviewLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reviewLabel"
        android:textAppearance="@style/HeaderText"
        android:textSize="34sp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/selectionRight"
        android:layout_marginTop="24dp" />

    <TextView
        android:id="@+id/TrailerLabel"
        android:layout_width="188dp"
        android:layout_height="45dp"
        android:text="@string/trailerLabel"
        android:textAppearance="@style/HeaderText"
        android:textSize="34sp"
        app:layout_constraintTop_toTopOf="@+id/selectionLeft"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="@+id/background_bottom" />


</android.support.constraint.ConstraintLayout>
